Fixes #30 . Also add overflow-wrap for rich text content to make sure long texts will never overflow horizontally.

--- a/bbs/src/pages/Thread/richtext.css
+++ b/bbs/src/pages/Thread/richtext.css
@@ -1,3 +1,7 @@
+.rich-text-content {
+  overflow-wrap: break-word;
+}
+
 .rich-text-content blockquote {
   background-color: rgb(241, 243, 250);
   padding: 12px 15px;
